public interface SemanticAction {
    public void execute(LexicalAnalyzer lexicAnalyzer, String lexema);
}
